<resources>
    <string name="app_name">Novigrad</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">E-mail</string>
    <string name="employeebtn">Employee</string>
    <string name="customersbtn">Customers</string>
    <string name="greeting">Welcome, succesfull authentification, employee or customers we dont know yet</string>
    <string name="btnLogout">Logout</string>
    <string name="customer">customer</string>
    <string name="employee">employee</string>
    <string name="admin_greet">Welcome, Admin, logged in as Admin</string>
    <string name="adminLogout">Logout</string>
    <string name="manageUsers">Manage Users</string>
    <string name="implementingdeleteusershere">implementing delete users here</string>
    <string name="delete">Delete</string>
    <string name="enterUsersEmail">Enter Users Email</string>
    <string name="emailNoSigns">Enter email with no \"@\",\".\" ie johngmailcom</string>
    <string name="emailnoSigns">Enter email with no character \"@\"\".\" ie johngmailcom</string>
    <string name="Services">Services</string>
    <string name="EnterBranchName">Enter Branch Name</string>
    <string name="EnterBranchNames">Enter Branch Name (employees only)</string>
    <string name="address">Address</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="number">Phone Number</string>
    <string name="welcome">Welcome</string>
    <string name="CompleteInfo">Complete Profile Info</string>
    <string name="done">DONE</string>
    <string name="title_activity_admin_service_view">adminServiceView</string>
</resources>