<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/adminGreet"
            android:layout_width="fill_parent"
            android:layout_height="103dp"
            android:gravity="center"
            android:text="@string/admin_greet" />

        <Button
            android:id="@+id/admin_Logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="adminOut"
            android:gravity="center"
            android:text="@string/adminLogout" />

        <Button
            android:id="@+id/button2"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:onClick="manageServices"
            android:translationY="-300dp"
            android:text="Manage Services" />

        <Button
            android:id="@+id/manage_users"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:onClick="manageUsers"
            android:text="@string/manageUsers"
            android:translationY="-300dp" />

    </LinearLayout>
</RelativeLayout>


