<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="35dp">

        <TextView
            android:id="@+id/notif_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="No notification"
            android:gravity="center"/>

        <Button
            android:id="@+id/clear_notif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:onClick="clear"
            android:text="Clear" />

        <ListView
            android:id="@+id/notif"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="103dp"
            android:gravity="center"
            android:text="@string/greeting" />

        <Button
            android:id="@+id/button3"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:onClick="customerBranchChoices"
            android:text="@string/Services" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:onClick="signOut"
            android:text="@string/btnLogout" />

    </LinearLayout>

</RelativeLayout>